Fix action menu z-index

--- a/src/css/ui/components/action-menu.css
+++ b/src/css/ui/components/action-menu.css
@@ -19,6 +19,7 @@
   gap: 0.25rem;
   padding: 0.25rem;
   animation: slide-down 0.2s var(--anim-elastic);
+  z-index: var(--layer-popover);
 }
 
 .action-menu .action-menu_action-item {
